--- a/product-service/requirements.txt
+++ b/product-service/requirements.txt
@@ -13,6 +13,9 @@ alembic==1.13.1
 passlib[bcrypt]==1.7.4
 bcrypt==4.1.2
 
+# JWT tokens
+python-jose[cryptography]==3.3.0
+
 # Environment variables
 python-dotenv==1.0.0
 
