feat: auth removed from other ser

--- a/inventory-service/requirements.txt
+++ b/inventory-service/requirements.txt
@@ -1,6 +1,8 @@
 fastapi
 uvicorn[standard]
-
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.2
+python-jose[cryptography]==3.3.0
 pydantic==2.12.3
 pydantic_core==2.41.4
 
