--- a/inventory-service/env.example
+++ b/inventory-service/env.example
@@ -5,3 +5,6 @@ POSTGRES_DB=inventory_service
 POSTGRES_HOST=inventory-db
 POSTGRES_PORT=5432
 
+# Product Service Configuration
+PRODUCT_SERVICE_URL=http://product-service:8001
+
