--- a/product-service/env.example
+++ b/product-service/env.example
@@ -5,6 +5,9 @@ POSTGRES_DB=product_service
 POSTGRES_HOST=product-db
 POSTGRES_PORT=5432
 
+# Redis Configuration
+REDIS_URL=redis://redis:6379
+
 # JWT Configuration
 SECRET_KEY=your-secret-key-here-change-in-production
 ALGORITHM=HS256
