--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,8 +83,11 @@ services:
       INVENTORY_SERVICE_URL: http://inventory-service:8002
       ALGORITHM: HS256
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
+      REDIS_URL: redis://redis:6379
     depends_on:
       product-db:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     volumes:
       - ./product-service:/app
@@ -137,6 +140,23 @@ services:
       - microservices-network
     restart: unless-stopped
 
+  # Redis Cache
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - microservices-network
+    restart: unless-stopped
+
 networks:
   microservices-network:
     driver: bridge
@@ -145,3 +165,4 @@ volumes:
   auth-db-data:
   product-db-data:
   inventory-db-data:
+  redis-data:
