--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,7 @@ services:
       POSTGRES_PORT: 5432
       TOKEN_SECRET: dev-secret-key-change-in-production
       INVENTORY_SERVICE_URL: http://inventory-service:8002
+      PRODUCT_SERVICE_URL: http://product-service:8001
       ALGORITHM: HS256
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
       REDIS_URL: redis://redis:6379
@@ -130,6 +131,7 @@ services:
       POSTGRES_HOST: inventory-db
       POSTGRES_PORT: 5432
       PRODUCT_SERVICE_URL: http://product-service:8001
+      AUTH_SERVICE_URL: http://auth-service:8000
       TOKEN_SECRET: dev-secret-key-change-in-production
     depends_on:
       inventory-db:
