--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -216,6 +216,8 @@ services:
         condition: service_healthy
     volumes:
       - ./booking-service:/app
+    # Increase shared memory for Playwright/Chromium (default 64MB is too small)
+    shm_size: "2gb"
     networks:
       - microservices-network
     restart: unless-stopped
@@ -268,22 +270,22 @@ services:
   #   networks:
   #     - microservices-network
   # Client (React Frontend)
-  client:
-    build:
-      context: ./client
-      dockerfile: Dockerfile
-    container_name: client
-    ports:
-      - "5173:5173"
-    environment:
-      - VITE_AUTH_SERVICE_URL=http://localhost:8000
-      - VITE_BOOKING_SERVICE_URL=http://localhost:8003
-    volumes:
-      - ./client:/app
-      - /app/node_modules
-    networks:
-      - microservices-network
-    restart: unless-stopped
+  # client:
+  #   build:
+  #     context: ./client
+  #     dockerfile: Dockerfile
+  #   container_name: client
+  #   ports:
+  #     - "5173:5173"
+  #   environment:
+  #     - VITE_AUTH_SERVICE_URL=http://localhost:8000
+  #     - VITE_BOOKING_SERVICE_URL=http://localhost:8003
+  #   volumes:
+  #     - ./client:/app
+  #     - /app/node_modules
+  #   networks:
+  #     - microservices-network
+  #   restart: unless-stopped
 
   # Redis Cache
   redis:
