--- a/booking-service/Dockerfile
+++ b/booking-service/Dockerfile
@@ -4,10 +4,35 @@ FROM python:3.12-slim
 # Set working directory in the container
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies (including Playwright/Chromium dependencies)
 RUN apt-get update && apt-get install -y \
     gcc \
     postgresql-client \
+    wget \
+    gnupg \
+    ca-certificates \
+    fonts-liberation \
+    libasound2 \
+    libatk-bridge2.0-0 \
+    libatk1.0-0 \
+    libatspi2.0-0 \
+    libcups2 \
+    libdbus-1-3 \
+    libdrm2 \
+    libgbm1 \
+    libgtk-3-0 \
+    libnspr4 \
+    libnss3 \
+    libwayland-client0 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxfixes3 \
+    libxkbcommon0 \
+    libxrandr2 \
+    xdg-utils \
+    libu2f-udev \
+    libvulkan1 \
+    fonts-unifont \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements file
@@ -15,6 +40,10 @@ COPY requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Install Playwright browsers (Chromium)
+# Note: We skip 'playwright install-deps' as we've manually installed dependencies above
+RUN playwright install chromium
 
 # Copy the application code
 COPY . .
