--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -304,6 +304,28 @@ services:
       - microservices-network
     restart: unless-stopped
 
+  # Nginx Reverse Proxy
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - auth-service
+      - booking-service
+      # Uncomment when services are enabled:
+      # - product-service
+      # - inventory-service
+      # - food-service
+      # - client
+    networks:
+      - microservices-network
+    restart: unless-stopped
+
 networks:
   microservices-network:
     driver: bridge
