--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -176,7 +176,7 @@ server {
         
         # CORS headers
         add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH,DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
         
         if ($request_method = OPTIONS) {
