--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,17 +10,8 @@ upstream auth_service {
     keepalive 32;
 }
 
-# Product Service - Port 8001 (commented out - service not enabled)
-# upstream product_service {
-#     server product-service:8001;
-#     keepalive 32;
-# }
-
-# Inventory Service - Port 8002 (commented out - service not enabled)
-# upstream inventory_service {
-#     server inventory-service:8002;
-#     keepalive 32;
-# }
+# Product Service - Port 8001 (REMOVED - functionality integrated into food-service)
+# Inventory Service - Port 8002 (REMOVED - functionality integrated into food-service)
 
 # Booking Service - Port 8003
 upstream booking_service {
@@ -97,74 +88,6 @@ server {
         proxy_pass http://auth_service/openapi.json;
         proxy_http_version 1.1;
     }
-
-    # ============================================
-    # Product Service Routes (commented out - service not enabled)
-    # ============================================
-    # location /product/ {
-    #     proxy_pass http://product_service/;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Connection "";
-    #     
-    #     # CORS headers
-    #     add_header Access-Control-Allow-Origin * always;
-    #     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-    #     add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-    #     
-    #     if ($request_method = OPTIONS) {
-    #         return 204;
-    #     }
-    # }
-
-    # # Product Service Docs
-    # location /product/docs {
-    #     proxy_pass http://product_service/docs;
-    #     proxy_http_version 1.1;
-    # }
-
-    # location /product/redoc {
-    #     proxy_pass http://product_service/redoc;
-    #     proxy_http_version 1.1;
-    # }
-
-    # location /product/openapi.json {
-    #     proxy_pass http://product_service/openapi.json;
-    #     proxy_http_version 1.1;
-    # }
-
-    # ============================================
-    # Inventory Service Routes (commented out - service not enabled)
-    # ============================================
-    # location /inventory/ {
-    #     proxy_pass http://inventory_service/;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Connection "";
-    #     
-    #     # CORS headers
-    #     add_header Access-Control-Allow-Origin * always;
-    #     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-    #     add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-    #     
-    #     if ($request_method = OPTIONS) {
-    #         return 204;
-    #     }
-    # }
-
-    # # Inventory Service Docs
-    # location /inventory/docs {
-    #     proxy_pass http://inventory_service/docs;
-    #     proxy_http_version 1.1;
-    # }
-
-    # location /inventory/redoc {
-    #     proxy_pass http://inventory_service/redoc;
-    #     proxy_http_version 1.1;
-    # }
-
-    # location /inventory/openapi.json {
-    #     proxy_pass http://inventory_service/openapi.json;
-    #     proxy_http_version 1.1;
-    # }
 
     # ============================================
     # Booking Service Routes
